--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "bizcharts": "^3.5.9",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "braft-editor": "^2.3.8",
+    "build": "^0.1.4",
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.21",
     "event-source-polyfill": "^1.0.20",
